--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025. Digital Agency. All rights reserved.</p>
+    <p>&copy; 2025. Digital Agency. All rights reserved. Made by Ezra</p>
   </footer>  
   <script defer src="js/main.js"></script>
 </body>
